feat: Sobre Nós

--- a/src/pages/Inicio/Inicio.module.scss
+++ b/src/pages/Inicio/Inicio.module.scss
@@ -1,12 +1,6 @@
 @import "styles/_variaveis.scss";
 
 
-.titulo {
-  color: $dark;
-  font-size: 3rem;
-  margin-bottom: 30px;
-}
-
 .recomendados {
   border-radius: 2px;
   display: flex;
@@ -41,7 +35,8 @@
   }
 }
 
-.nossaCasa {
+
+.nossaColecao {
   margin-bottom: 100px;
   position: relative;
   width: 100%;
