--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,23 @@
+@import url("https://fonts.googleapis.com/css2?family=Italiana&family=Quicksand:wght@400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;1,300&family=Source+Sans+Pro:wght@200;300;400;600;700;900&family=Work+Sans:wght@500&display=swap");
 
+@import url("https://fonts.googleapis.com/css2?family=Italiana&family=Josefin+Sans:wght@400;700&family=Quicksand:wght@400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;1,300&family=Source+Sans+Pro:wght@200;300;400;600;700;900&family=Work+Sans:wght@500&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Italiana&family=Quicksand:wght@400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;1,300&family=Source+Sans+Pro:wght@200;300;400;600;700;900&family=Work+Sans:wght@500&display=swap');
-
-
-body{
+body {
   background-color: #f6f6f6;
 }
 
-*{
+* {
   box-sizing: border-box;
-  font-family: 'Italiana', serif;
+  font-family: "Italiana", serif;
   /* font-family: 'Quicksand', sans-serif;
   font-family: 'Roboto', sans-serif;
   font-family: 'Source Sans Pro', sans-serif;
   font-family: 'Work Sans', sans-serif; */
+}
+
+
+#root > main.container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
